# zkteco_attendance

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
public/css/: zkteco_attendance.bundle.css
public/js/: zkteco_attendance.js
zkteco_attendance/: hooks.py  install.py  modules.txt
zkteco_attendance/config/: desktop.py  docs.py
zkteco_attendance/doctype/attendance_sync_log/: attendance_sync_log.json  attendance_sync_log.py
zkteco_attendance/doctype/biometric_device/: biometric_device.json  biometric_device.py
zkteco_attendance/doctype/device_employee_mapping/: device_employee_mapping.json  device_employee_mapping.py
zkteco_attendance/page/zkteco_dashboard/: zkteco_dashboard.js  zkteco_dashboard.json  zkteco_dashboard.py
zkteco_attendance/public/css/: zkteco_attendance.css
zkteco_attendance/public/js/: biometric_device.bundle.js  biometric_device.js  zkteco_attendance.bundle.js  zkteco_attendance.js
zkteco_attendance/scheduler/: jobs.py
zkteco_attendance/utils/: sync_engine.py  zk_connector.py
zkteco_attendance/workspace/: zkteco_attendance.json
zkteco_attendance/workspace/zkteco_attendance/: zkteco_attendance.json
zkteco_attendance/zkteco_attendance/: attendance_processor.py  install.py  patches.txt  sync_engine.py  utils.py  zk_client.py
zkteco_attendance/zkteco_attendance/api/: endpoints.py
zkteco_attendance/zkteco_attendance/dashboard_chart/checkins_last_7_days/: checkins_last_7_days.json
zkteco_attendance/zkteco_attendance/doctype/attendance_summary/: attendance_summary.js  attendance_summary.json  attendance_summary.py
zkteco_attendance/zkteco_attendance/tasks/: scheduler.py
zkteco_attendance/zkteco_attendance/tests/: test_sync_engine.py
(+21 files in other folders)
