[project]
name = "zkteco_attendance"
version = "1.0.0"
description = "ZKTeco Biometric Attendance Integration for ERPNext/Frappe"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyzk>=0.9",
    "pytz>=2021.1",
]

[project.urls]
Homepage = "https://github.com/your-org/zkteco_attendance"

[build-system]
requires = ["flit_core>=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "zkteco_attendance"

[tool.flit.include]
"zkteco_attendance/doctype/**/*.json" = "zkteco_attendance/doctype/**/*.json"
"zkteco_attendance/page/**/*.json" = "zkteco_attendance/page/**/*.json"
"zkteco_attendance/workspace/*.json" = "zkteco_attendance/workspace/*.json"
"zkteco_attendance/public/**/*.js" = "zkteco_attendance/public/**/*.js"
"zkteco_attendance/public/**/*.css" = "zkteco_attendance/public/**/*.css"
"zkteco_attendance/**/*.md" = "zkteco_attendance/**/*.md"
"zkteco_attendance/**/*.txt" = "zkteco_attendance/**/*.txt"
