[project]
name = "zkteco_attendance"
version = "1.0.0"
description = "ZKTeco Biometric Attendance Integration for ERPNext/Frappe"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyzk>=0.9",
    "pytz>=2021.1",
]

[project.urls]
Homepage = "https://github.com/your-org/zkteco_attendance"

[build-system]
requires = ["flit_core>=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "zkteco_attendance"

[tool.flit.sdist]
include = [
    "zkteco_attendance/doctype/",
    "zkteco_attendance/page/",
    "zkteco_attendance/workspace/",
    "zkteco_attendance/public/",
    "README.md",
    "MANIFEST.in",
    "requirements.txt",
    "setup.py",
]
